--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Type effect</title>
 </head>
 
-<body>
+<body class="bg-img">
     <header class="showcase">
         <div class="content">
             <h1 id="noBlur">Miguel Bento
