--- a/index.html
+++ b/index.html
@@ -14,19 +14,11 @@
 <body class="bg-img">
     <header class="showcase">
         <div class="content">
-            <h1 id="noBlur">Miguel Bento
-                <br>
-                <span class="txt-type" data-wait="3000" data-words='["Developer", "Musician", "", "Barista"]'></span>
-            </h1>
-            <h2 id="Blur">Let's Continue
-                <a href=""> <i id="arrow-btn" class="far fa-arrow-alt-circle-right"></i></a>
-            </h2>
+            <h1 id="noBlur">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='["Developer", "Musician", "", "Barista"]'></span></h1>
+            <h2 id="Blur">Let's Continue<a href=""> <i id="arrow-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>
         </div>
     </header>
-
-    <footer>Miguel Bento &copy;2019 </footer>
-
-
+    <footer class="footer">Miguel Bento &copy;2019 </footer>
     <script src="/main.js"></script>
 </body>
 
