--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             <h2 id="Blur">Let's Continue<a href=""> <i id="arrow-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>
         </div>
     </header>
-    <footer class="footer">Miguel Bento &copy;2019 </footer>
+    <footer>
+        <div class="footer">
+                Miguel Bento &copy;2019 
+                <div>
+                    <br>
+                    <i class="fab fa-mailchimp">Miguel.Bento@mail.com</i>                    
+                </div>
+        </div>
+    </footer>
     <script src="/main.js"></script>
 </body>
 
