--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,24 +9,32 @@
     <link rel="stylesheet" href="/style.css">
     <title>Type effect</title>
 </head>
-
-<body class="bg-img">
-    <header class="showcase">
-        <div class="content">
-            <h1 id="noBlur">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='["Developer", "Musician", "", "Barista"]'></span></h1>
-            <h2 id="Blur">Let's Continue<a href=""><i id="arrow-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>
+<body>
+    <div id="container">
+        <div id="header">
+            <header class="showcase">
+                <div class="content">
+                    <h1>Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='["Developer", "Musician", "Programmer", "Creator", "Barista"]'></span></h1>
+                    <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
+                </div>
+            </header>
         </div>
-    </header>
-    <footer>
-        <div class="footer">
-                Miguel Bento &copy;2019 
+    </div>
+
+    <div id="footer">
+        <footer>
+            <div class="footer">
+                Miguel Bento &copy;2019
                 <div>
                     <br>
-                    <i class="fab fa-mailchimp">Miguel.Bento@mail.com</i>                    
+                    <i class="fab fa-mailchimp" id="btn-btn"></i>
+                    <a href="mailto:Miguel.Bento@mail.com">Miguel.Bento@mail.com </a> 
                 </div>
-        </div>
-    </footer>
+            </div>
+        </footer>
+    </div>
     <script src="/main.js"></script>
+    </div>
 </body>
 
 </html>
