--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="header">
             <header class="showcase">
                 <div class="content">
-                    <h1>Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='["Developer", "Musician", "Programmer", "Creator", "Barista"]'></span></h1>
+                    <h1>Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
                     <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
                 </div>
             </header>
@@ -24,11 +24,11 @@
     <div id="footer">
         <footer>
             <div class="footer">
-                Miguel Bento &copy;2019
-                <div>
-                    <br>
                     <i class="fab fa-mailchimp" id="btn-btn"></i>
                     <a href="mailto:Miguel.Bento@mail.com">Miguel.Bento@mail.com </a> 
+                <div>
+                    <br>
+                    Miguel Bento &copy;2019
                 </div>
             </div>
         </footer>
