--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <footer>
             <div class="footer">
                     <i class="fab fa-mailchimp" id="btn-btn"></i>
-                    <a href="mailto:Miguel.Bento@mail.com">Miguel.Bento@mail.com </a> 
+                    <a href="mailto:Miguel.Bento@mail.com">Contact </a> 
                 <div>
                     <br>
-                    Miguel Bento &copy;2019
+                    Mr Monkey &copy;2019
                 </div>
             </div>
         </footer>
