--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
             </header>
         </div>
     </div>
-
     <div id="footer">
-        <footer>
-            <div class="footer">
-                    <i class="fab fa-mailchimp" id="btn-btn"></i>
-                    <a href="mailto:Miguel.Bento@mail.com">Contact </a> 
-                <div>
-                    <br>
-                    Mr Monkey &copy;2019
-                </div>
+        <footer class="footer">
+            <i class="fab fa-mailchimp" id="btn-btn"></i>
+            <a href="mailto:Miguel.Bento@mail.com">Contact </a>
+            <div>
+                <br>
+                Mr. Monkey &copy;2019
             </div>
         </footer>
     </div>
