--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link href="/_site/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="/_site/css/style.css">
     <title>Type effect</title>
 </head>
+
 <body>
-    <div id="container">
+    <div class="container">
         <div id="header">
             <header class="showcase">
                 <div class="content">
-                    <h1>Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
+                    <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
                     <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
                 </div>
             </header>
         </div>
     </div>
-    <div id="footer">
-        <footer class="footer">
-            <i class="fab fa-mailchimp" id="btn-btn"></i>
-            <a href="mailto:Miguel.Bento@mail.com">Contact </a>
-            <div>
-                <br>
-                Mr. Monkey &copy;2019
-            </div>
-        </footer>
-    </div>
-    <script src="/main.js"></script>
+    <footer class="footer mt-auto py-1">
+        <div class="footer-container">
+            <span class="text-muted">
+                <a href="mailto:Miguel.Bento@mail.com "><i class="far fa-envelope mr-1" id="btn-btn"></i>Contact<br></a></span>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="/_site/js/main.js"></script>
     </div>
 </body>
-
 </html>
