--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <footer class="footer mt-auto py-1">
         <div class="footer-container">
             <span class="text-muted">
-                <a href="mailto:Miguel.Bento@mail.com "><i class="far fa-envelope mr-1" id="btn-btn"></i>Contact<br></a></span>
+                <a href="mailto:Miguel.Bento@mail.com"><i class="far fa-envelope mr-2" id="btn-btn"></i>Contact<br></a></span>
         </div>
     </footer>
-    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     </div>
 </body>
