--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <a href="mailto:Miguel.Bento@mail.com"><i class="far fa-envelope mr-2" id="btn-btn"></i>Contact<br></a></span>
         </div>
     </footer>
-    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>-->
+    <script src="/js/main.js"></script>
     </div>
 </body>
 </html>
