--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Miguel Bento</title>
 </head>
-
 <body>
-    <div class="container">
-        <div id="header">
-            <header class="showcase">
-                <div class="content">
-                    <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
-                    <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
-                </div>
+    <div class="container header">
+            <header class="showcase content row" id="header">
+                    <div class="col-md-9">
+                        <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
+                        <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
+                    </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-3"></div>
             </header>
-        </div>
     </div>
     <footer class="footer mt-auto py-1">
         <div class="footer-container">
@@ -31,7 +30,8 @@
     </footer>
     <script src="/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>    
+        crossorigin="anonymous"></script>
     </div>
 </body>
+
 </html>
