--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 <body>
     <div class="container header">
             <header class="showcase content row" id="header">
-                    <div class="col-md-9">
+                    <div class="col-md-12">
                         <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
                         <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
-                    </div>
-                    <div class="col-md-3"></div>
-                    <div class="col-md-3"></div>
+                    </div>                    
             </header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12"><i class="fas fa-play"></i></div>
+                </div>
+            </div>
     </div>
     <footer class="footer mt-auto py-1">
         <div class="footer-container">
