--- a/index.html
+++ b/index.html
@@ -7,34 +7,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">    
+        crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <title>Miguel Bento</title>
 </head>
+
 <body>
-    <div class="container header">
-            <header class="showcase content row" id="header">
-                    <div class="col-md-12">
-                        <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
-                        <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
-                    </div>                    
-            </header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12"><i class="fas fa-play"></i></div>
-                </div>
+    <div class="container">
+        <header class="showcase content row" id="header">
+            <div class="col-md-12">
+                <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
+                <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
             </div>
-    </div>
-    <footer class="footer mt-auto py-1">
-        <div class="footer-container">
-            <span class="text-muted">
-                <a href="mailto:Miguel.Bento@mail.com"><i class="far fa-envelope mr-2" id="btn-btn"></i>Contact<br></a></span>
+        </header>
+        <div class="btn-group">
+            <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                Song 1
+            </button>
+            <div class="dropdown-menu">
+                    <iframe class="iframe" src="https://archive.org/embed/Song1_201812"></iframe>
+                  </div>
+            </div>
         </div>
-    </footer>
+
+        
+
+    </div>
+
+    <div>
+        <footer class="footer mt-auto py-1">
+            <div class="footer-container">
+                <span class="text-muted">
+                    <a href="mailto:Miguel.Bento@mail.com"><i class="far fa-envelope mr-2" id="btn-btn"></i>Contact<br></a></span>
+            </div>
+        </footer>
+
+    </div>
     <script src="/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    </div>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
