--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Song 1
             </button>
             <div class="dropdown-menu">
-                    <iframe class="iframe" src="https://archive.org/embed/Song1_201812" webkitallowfullscreen=true mozallowfullscreen=true></iframe>
+                    <iframe class="iframe" src="https://archive.org/embed/Song1_201812" webkitallowfullscreen=true mozallowfullscreen=true allowfullscreen></iframe>
                   </div>
             </div>
         </div>
