--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="mt-5">Miguel Bento<br><span class="txt-type" data-wait="3000" data-words='[ "Musician", "Programmer", "Barista"]'></span></h1>
                 <!--<h2 id="Blur">Let's Continue<a href=""><i id="btn-btn" class="far fa-arrow-alt-circle-right"></i></a></h2>-->
             </div>
-        </header>
+        </header><!--
         <div class="btn-group">
             <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -29,9 +29,7 @@
                     <iframe class="iframe" src="https://archive.org/embed/Song1_201812" webkitallowfullscreen=true mozallowfullscreen=true allowfullscreen></iframe>
                   </div>
             </div>
-        </div>
-
-        
+        </div>-->        
 
     </div>
 
